Inset checkbox focus rings.

The focus ring bounds are 2px larger than the checkbox so that it is not
clipped. Radio buttons need to do nothing special, but Checkbox's focus
ring paint method needs to remove this 2px.

Bug: 757653
Change-Id: Iad4c42d349cef655edc44c976f1edbdd993b590e